# education

./: README.md
Архитектура ЭВМ/: 433  443  443.asm  58a.asm  68b.asb  68b.asm  Задачи за 2 семестр.md  Ответы на эзамен 3 семестр.md
Архитектура ЭВМ/Лекции/: Mar 21 - Прерывания. Основные хар-ки ЭВМ, связанные с прерываниями.md  Mar 28.md
Вычмат/: task2.py
Вычмат/task1/: main.py  uni.py
ООП/: a.out  complex.cpp  ТЗ Курсовая.md
ООП/Lab1/: Lab1.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
ООП/build-Lab1-Desktop_Qt_5_11_0_GCC_64bit-Debug/: Lab1  Makefile  moc_mainwindow.cpp  ui_mainwindow.h
ООП/build-calc-Desktop_Qt_5_11_0_GCC_64bit-Debug/: Makefile  calc  calculator.py  moc_mainwindow.cpp  ui_mainwindow.h
ООП/complex_int/: CMakeLists.txt  complex.cpp  complex.h  main.cpp
ООП/Лекции/: Apr 10 - Семестр 2. Лекция 5.md  Mar 22 - Семестр 2 Лекция 2.md
ООП/Программирование 1, 2 семестр/: README.md  task10_68b.asm  task11_80.py  task12_113a.py  task14_119g.py  task15_136v.py  task16_139zh.py  task17_152.py  task1_14.py  task23_320.py  task24_338v.py  task25_376b.py  task28_680b.py  task29_692g.py  (+8 more)
Практика по C/: task10_433.c  task11_684.c  task1_11v.c  task2_60v.c  task3_76g.c  task4_77e.c  task5_197.c  task7_266.c  task8_393v.c
САОД/: geom_avg.cpp  k  knowledge.cpp  recursive.py  test  test.cpp  Отчёт АТД.odt  знания.txt  сред геом.md
Электротехника/: .~lock.Лаба 1 -  вычисления.ods#  Лаба 1 -  вычисления.ods
архив/: 443.asm  automata.py  mandelbrot.py  test.py  Курсовая (copy).odt  Курсовая.odt  сред геом.md
архив/knowledge/: CMakeLists.txt
(+44 files in other folders)
